[package]
name = "kenchon_book_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "customizedlinkedlist_main"
path = "examples/customizedlinkedlist_main.rs"

[[bin]]
name = "samplelinkedlist_main"
path = "examples/samplelinkedlist_main.rs"