[package]
name = "kenchon_book_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "customizedlinkedlist_main"
path = "examples/customizedlinkedlist_main.rs"

[[bin]]
name = "samplelinkedlist_main"
path = "examples/samplelinkedlist_main.rs"

[[bin]]
name = "samplelinkedlist2_main"
path = "examples/samplelinkedlist2_main.rs"

[[bin]]
name = "8-6"
path = "examples/8-6.rs"

[[bin]]
name = "10-3"
path = "examples/10-3.rs"

[[bin]]
name = "10-4"
path = "examples/10-4.rs"

[[bin]]
name = "10-5"
path = "examples/10-5.rs"

[[bin]]
name = "11-3"
path = "examples/11-3.rs"

[[bin]]
name = "11-4"
path = "examples/11-4.rs"

[[bin]]
name = "12-1"
path = "examples/12-1.rs"

[[bin]]
name = "12-2"
path = "examples/12-2.rs"